--- a/index.html
+++ b/index.html
@@ -8,27 +8,7 @@
   </head>
   <body>
     <h1>Timer</h1>
-    <div class="timer" id="timer-1">
-      <div class="field">
-        <span class="value" data-value="days">{{days}}</span>
-        <span class="label">Days</span>
-      </div>
-
-      <div class="field">
-        <span class="value" data-value="hours">{{hours}}</span>
-        <span class="label">Hours</span>
-      </div>
-
-      <div class="field">
-        <span class="value" data-value="mins">{{mins}}</span>
-        <span class="label">Minutes</span>
-      </div>
-
-      <div class="field">
-        <span class="value" data-value="secs">{{secs}}</span>
-        <span class="label">Seconds</span>
-      </div>
-    </div>
+    <div class="timer" id="timer-1"></div>
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
